Fixed some spacing

--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ body {
 
 #R6-channel1 {
   top: 0px;
-  left: 2352px;
+  left: 2270px; /*2352*/
 }
 
 /* Specific Card Positions for Monitor 2 */
